--- a/package.json
+++ b/package.json
@@ -1,16 +1,24 @@
 {
   "dependencies": {
+    "concurrently": "^5.3.0",
     "dotenv": "^8.2.0",
+    "ejs": "^3.1.6",
     "express": "^4.17.1",
+    "express-validator": "^6.9.2",
     "pg": "^8.5.1"
+  },
+  "engines": {
+    "node": ">= 14"
   },
   "name": "vef2-2021-v2",
   "description": "Verkefni 2",
   "version": "1.0.0",
   "main": "./src/app.js",
-  "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "lint": "eslint ./src",
+    "test": "node --experimental-vm-modules node_modules/.bin/jest",
+    "//": "Keyrum sass:build alltaf að neðan áður en við byrjum svo það sé örugglega til css skrá",
+    "dev": "nodemon ./src/app.js",
     "start": "node ./src/app.js"
   },
   "repository": {
@@ -25,9 +33,9 @@
   },
   "homepage": "https://github.com/johannesnordal/vef2-2021-v2#readme",
   "devDependencies": {
-    "eslint": "^7.19.0",
+    "eslint": "^7.20.0",
     "eslint-config-airbnb-base": "^14.2.1",
     "eslint-plugin-import": "^2.22.1",
-    "node-sass": "^5.0.0"
+    "nodemon": "^2.0.7"
   }
 }
