--- a/package.json
+++ b/package.json
@@ -15,11 +15,13 @@
   "version": "1.0.0",
   "main": "./src/app.js",
   "scripts": {
-    "lint": "eslint ./src",
-    "test": "node --experimental-vm-modules node_modules/.bin/jest",
-    "//": "Keyrum sass:build alltaf að neðan áður en við byrjum svo það sé örugglega til css skrá",
+    "test": "npm run test:eslint && npm run test:stylelint",
+    "test:eslint": "eslint ./src",
+    "test:stylelint": "stylelint './public/styles.css'",
     "dev": "nodemon ./src/app.js",
-    "start": "node ./src/app.js"
+    "run-server": "node ./src/app.js",
+    "start": "npm run run-server",
+    "setup": "node src/setup.js"
   },
   "repository": {
     "type": "git",
@@ -36,6 +38,8 @@
     "eslint": "^7.20.0",
     "eslint-config-airbnb-base": "^14.2.1",
     "eslint-plugin-import": "^2.22.1",
-    "nodemon": "^2.0.7"
+    "nodemon": "^2.0.7",
+    "stylelint": "^13.10.0",
+    "stylelint-config-standard": "^20.0.0"
   }
 }
