--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "test:eslint": "eslint ./src",
     "test:stylelint": "stylelint './public/styles.css'",
     "dev": "nodemon ./src/app.js",
-    "start": "node ./src/app.js",
+    "start": "node src/app.js",
     "setup": "node src/setup.js"
   },
   "repository": {
